Changes towards version 0.2:
- Voice-over / subtitle synch is done - PhracturedBlue
- Optimized DCQ to be much smaller and faster
- Added stat data in outfit screen (use --font=pc) - from Nic
- Added fixed introx.mod, from fOSSiL
- Fixed Orz .mod file, from fOSSiL
- Added vertical alignment for subtitles (text runs off screen fix)-from Nic
- Updated infinity text/symbol for RUs - from fOSSiL, Nic
- Split away DCQ-specific code into its own header file
- Added correct lander font - from fOSSiL
- Added support for multiple menu hierarchies, and a few PC hiers. -PBlue
- Fixed a potential semaphore race when suspending clock -PhracturedBlue
- Function name conflict fixes for Mac OSX -by peterb
- Minor fixes for pc-fonts (Outfit screen, gradient color swap) -by Nic
- DCQ is now accessed uniformly by routines in gfx_common.c
- Fixed OpenGL colors on MacOS X -Mika
- Added a sane cmd-line naming scheme: --opt=(pc|3do) see --help for more -PBlue
- Added new font effect (PC-lander messages), and set colors for text -PBlue
- Use correct font for 'CAPTAIN', 'FUEL', and 'CREW' is status screen -PBlue
- Added gradiated font support (for ship name), and PC-font option -PBlue
- Minor fixes to PCMenu by fOSSiL, Nic, PhracturedBlue
- Updated mingw support with better directions, and easier build -PBlue
- PCMenus now suports 'settings', and menu font is correct -PhracturedBlue
- Added '-b' option to get PC Menus -PhracturedBlue
- Check for a deadlock in savedgames and try to continue -PhracturedBlue
- Added an option ('-a') to display 'PC-style' coarse-scan -PhracturedBlue
- Fixed deadlock races in new FlushGraphics method -PhracturedBlue
- FlushGraphics now waits and notifies on a per-thread level - McMartin
- No longer using SHGetFolderPath on Windows - SvdB
- Key repeat is now enabled when typing text, from slayne
- Capital letter bug in new input code fixed, from slayne
- Oscilloscope now reacts to music when speech is disabled (OpenAL) -Mika